--- a/index.html
+++ b/index.html
@@ -45,9 +45,101 @@
             </div>
            </div>
         </section>
+        <section>
+            <div class="features max-width-1 display-flex">
+                <div class="feature-container">
+                   <div class="feature-title">
+                     <h3 class="dark-1 font-size-45">Features you will <br> love & enjoy</h3>
+                    <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                   </div>
+                    <div class="feature-card-container">
+                        <div class="feature-card">
+                            <h4 class="dark-1">Dexktop & Mobile Version</h4>
+                            <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        </div>
+                        <div class="feature-card">
+                            <h4 class="dark-1">Dexktop & Mobile Version</h4>
+                            <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        </div>
+                        <div class="feature-card">
+                            <h4 class="dark-1">Dexktop & Mobile Version</h4>
+                            <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        </div>
+                        <div class="feature-card">
+                            <h4 class="dark-1">Dexktop & Mobile Version</h4>
+                            <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="feature-container ">
+                    <img src="./images/architect.png" alt="">
+                    <div class="exp-btn-container">
+                        <button class="primary-btn exp-btn"><span id="year10">10+Year</span><br>
+                    <span id="experience">Experience</span></button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="fact max-width-1">
+                <div class="fact-container">
+                    <h3 class="dark-1 font-size-45">Some Facts</h3>
+                    <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                    <div class="fact-item-container">
+                        <div class="fact-items">
+                            <div class="fact-item">
+                                <img  src="./images/icons/ribon.png" alt="">
+                                <h3 class="dark-1 font-size-45">54</h3>
+                                <p class="dark-2">Awards Winnings</p>
+                            </div>
+                        </div>    
+                        <div class="fact-items">
+                            <div class="fact-item">
+                                <img  src="./images/icons/projects.png" alt="">
+                                <h3 class="dark-1 font-size-45">1458</h3>
+                                <p class="dark-2">Project Finished</p>
+                            </div>
+                        </div>    
+                        <div class="fact-items">
+                            <div class="fact-item">
+                                <img  src="./images/icons/customers.png" alt="">
+                                <h3 class="dark-1 font-size-45">6554</h3>
+                                <p class="dark-2">Clients Worked</p>
+                            </div>
+                        </div>    
+                        <div class="fact-items">
+                            <div class="fact-item">
+                                <img  src="./images/icons/email.png" alt="">
+                                <h3 class="dark-1 font-size-45">22578</h3>
+                                <p class="dark-2">Email Send</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="sponsor max-width-1">
+               <div class="sponsor-container">
+                 <div class="sponsor-title">
+                    <h3 class="dark-1 font-size-45">Our Sponsor</h3>
+                    <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                </div>
+               </div>
+                <div class="sponsor-name">
+                    <img src="./images/sponsors/amazon.png" alt="">
+                    <img src="./images/sponsors/figma.png" alt="">
+                    <img src="./images/sponsors/google.png" alt="">
+                    <img src="./images/sponsors/spotify.png" alt="">
+                    <img src="./images/sponsors/telerama.png" alt="">
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
-
+        <div class="footer max-width-1">
+            <p class="dark-2">All rights reserved copyright@2023 startup landing page design</p>
+        </div>
     </footer>
 </body>
 </html>
